  - Remote API debugger commands can also use expression expansion
  - Both single and double quotes can be used to mark expressions
  - In addition to text section offset, data and bss section offsets
    can be given when loading symbols (useful for Devpac symbols)
  - Output what value was set by options if it's not otherwise shown by UI
  - Function arguments are shown in traces for all non-MiNT GEMDOS calls
    and subset of arguments are now shown also for AES calls (values in
    intin array and strings in addrin array)
  - Add NVRAM read & write tracing
  - Support for the basic Native Features and --natfeats option to control it:
    http://wiki.aranym.org/natfeats/proposal

Windows specific changes:
- "-W" option added for opening a console window.  Like on all other platforms,
  "-D" will now just toggle CPU exception handling
- Fix: console stderr redirection (used invalid "wr" mode)
- Fix Windows localtime() not supporting dates before 1970:
  - TOS not being able to access files with such dates, or further files
  - causing IKBD emulation crashes (wasn't problem with Cygwin,
    just with Mingw builds)

Tool updates:
- New hatari-profiler.py script for post-processing output from
  profiler's CPU and DSP profiling "save" commands:
	profile save <filename>
	dspprofile save <filename>
  - With symbol address information it can provide function level
    instruction, processor cycle & i-cache miss statistics
  - With callers information it can create function call callgraphs
    and create callgrind format files for Kcachegrind GUI
- New gst2ascii tool to extract DRI/GST symbol table from Atari program,
  for use with the profile data post-processor
- Added scripts for converting symbol tables in Devpac 3 listings and DSP LOD
  files to a format understood by Hatari debugger 'symbols' command,
  and to clean 'nm' output of GCC & VBCC built a.out binaries for it

Other changes:
- HTML documentation indeces generated dynamically with JS